# aoc2020

./: Cargo.toml
src/inputs/: asd.js
src/puzzles/day_01/: Cargo.toml
src/puzzles/day_01/src/: main.rs
src/puzzles/day_02/: Cargo.toml
src/puzzles/day_02/src/: main.rs
src/puzzles/day_03/: Cargo.toml
src/puzzles/day_03/src/: main.rs
src/puzzles/day_04/: Cargo.toml
src/puzzles/day_04/src/: main.rs
src/puzzles/day_05/: Cargo.toml
src/puzzles/day_05/src/: main.rs
src/puzzles/day_06/: Cargo.toml
src/puzzles/day_06/src/: main.rs
src/puzzles/day_07/: Cargo.toml
src/puzzles/day_07/src/: main.rs
src/puzzles/day_08/: Cargo.toml
src/puzzles/day_08/src/: main.rs
src/puzzles/day_09/: Cargo.toml
src/puzzles/day_09/src/: main.rs
src/puzzles/day_10/: Cargo.toml
src/puzzles/day_10/src/: main.rs
src/puzzles/day_11/: Cargo.toml
src/puzzles/day_11/src/: main.rs
src/puzzles/day_12/: Cargo.toml
src/puzzles/day_12/src/: main.rs
src/puzzles/day_13/: Cargo.toml
src/puzzles/day_13/src/: main.rs
src/puzzles/day_14/: Cargo.toml
src/puzzles/day_14/src/: main.rs
src/puzzles/day_15/: Cargo.toml
src/puzzles/day_15/src/: main.rs
src/puzzles/day_16/: Cargo.toml
src/puzzles/day_16/src/: main.rs
src/puzzles/day_17/: Cargo.toml
src/puzzles/day_17/src/: main.rs
src/puzzles/day_18/: Cargo.toml
src/puzzles/day_18/src/: main.rs
src/puzzles/day_19/: Cargo.toml
src/puzzles/day_19/src/: main.rs
src/puzzles/day_20/: Cargo.toml
src/puzzles/day_20/src/: main.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs
