[package]
name = "day_04"
version = "0.1.0"
authors = ["Mariano Heller <marianofheller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
regex = "1.5"